Mar 31 2004  devel  Fixed gpsmap cache error reporting mistake
                    Changed 'best signal' and 'best noise' stuff to handle dBm
                    Fixed signal recording for wext
                    Changed text in panel signal window slightly
                    Fixed gpsmap to count actual valid samples instead of all
                     samples in a file when determining if any samples were
                     collected
                    Added --color-saturation and --map-intensity to gpsmap to
                     change the greyscale desaturation and overall intensity
                     of the background map image.
Mar 30 2004  devel  Tentative support for calculating SNR from signal levels
                     in dBm for Kismet and gpsmap
Mar 29 2004  devel  Removed size restriction testing for now, let the remote
                     mapsource blow up if we're not a valid size.
                    Put scale ranges into --help
                    Fixed error in tcpclient reading new major/minors
                    Added Null mapsource for blank background to gpsmap
Mar 27 2004  devel  Fixed Mapblast map source in GPSMap, left Earthamap as the
                     default however.  (Thanks, poptix!)
                    Fixed mapblast user-scale
Mar 26 2004  devel  Added feathered scatter plot drawing to gpsmap.  This is
                     VERY slow but produces some nice effects in combination
                     with channel coloring to show saturation in an area.
                    Tweaked feather circle center drawing
Mar 25 2004  devel  Added binary caching to gpsmap, this more than doubles
                     the speed of gpsmap when repeatedly processing the same
                     sets of XML data.
Mar 23 2004  devel  Tweaked gpsmap channel color allocation
                    Tweaked legend drawing to scale to US 11 channels if
                     there are no networks on higher channels.  This makes